# sciberget

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: auto-build.yml  build-app.yml  build-cvmfs-server.yml  build-desktop.yml  manual-build.yml  test-cvmfs.yml  update-apps-json.yml  validate-recipes.yml
builder/: validation.py
command/: __main__.py  build.sh  build_menu.py  fetch_and_run.sh  install.sh  sciberget-applications.menu
config/cvmfs/: sciberget.example.org.conf  sciberget.example.org.pub
cvmfs/: generate_log.py  log.txt
docs/: architecture.md  cvmfs-stratum0.md  e2e-compose.md  recipes.md
recipes/aircrack-ng/: build.yaml
recipes/autopsy/: build.yaml
recipes/binwalk/: build.yaml
recipes/burpsuite/: build.yaml
recipes/enum4linux-ng/: build.yaml
recipes/exploitdb/: build.yaml
recipes/ffuf/: build.yaml
recipes/ghidra/: build.yaml
recipes/gobuster/: build.yaml
recipes/hashcat/: build.yaml
recipes/hydra/: build.yaml
recipes/impacket-scripts/: build.yaml
recipes/john/: build.yaml
recipes/metasploit-framework/: build.yaml
recipes/netcat-traditional/: build.yaml
recipes/netexec/: build.yaml
recipes/nikto/: build.yaml
recipes/nmap/: build.yaml
recipes/nuclei/: build.yaml
recipes/responder/: build.yaml
recipes/sciberget-cvmfs-server/: apps.json  build.yaml  entrypoint.sh
recipes/sciberget-desktop/: build.yaml  install-desktop-integration.py  start-desktop.sh
recipes/sqlmap/: build.yaml
recipes/tcpdump/: build.yaml
recipes/wireshark/: build.yaml
tools/: generate_apps_json.py
(+44 files in other folders)
